test/suites/fail-lower/L-018.expected
  × One or more errors occured.

Error: L-018

  × Operator already defined: ->
   ╭─[L-018.pol:5:1]
 4 │ 
 5 │ infix _ -> _ := Fun(_,_)
   · ────────────────────────
   ╰────
