test/suites/fail-lower/L-018.pol
codata Fun(a b: Type) { Fun(a,b).ap(a b: Type, x: a): b }

infix _ -> _ := Fun(_,_)

infix _ -> _ := Fun(_,_)